fix(tab-bar): reduce original letter spacing in MD tabs

--- a/src/components/tab-bar/tab-bar.scss
+++ b/src/components/tab-bar/tab-bar.scss
@@ -126,6 +126,7 @@ $tab-scroller-fade-width: 65;
 
 .mdc-tab {
     border-radius: 0;
+    letter-spacing: normal;
 }
 
 .mdc-tab {
